made the code for autogenerated weapon upgrade tech more sensible and made mining lasers and construction guns not upgradeable

--- a/data/objects/weapons.toml
+++ b/data/objects/weapons.toml
@@ -31,6 +31,7 @@ instaHit = true
 constructionWeapon = true
 cost = [["COMMON_ORE", 5.0]]
 weaponPoints = 1.0
+upgradeable = false
 
 [MINING_LASER]
 name = "Mining Laser"
@@ -41,6 +42,7 @@ instaHit = true
 miningWeapon = true
 cost = [["COMMON_ORE", 5.0]]
 weaponPoints = 1.0
+upgradeable = false
 
 [ROCKET_LAUNCHER]
 name = "Rocket Launcher"
