--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -218,6 +218,7 @@
     </ClInclude>
     <ClInclude Include="src\AllianceList.h" />
     <ClInclude Include="src\Asteroid.h" />
+    <ClInclude Include="src\Serialize.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
