ship factory texture is now back to the old one

--- a/data/objects/buildings.toml
+++ b/data/objects/buildings.toml
@@ -55,13 +55,12 @@ category = "Defense"
 [SHIP_FACTORY]
 name = "Ship Factory"
 scale = 3.0
-texturePath = "data/art/factory3d.png"
+texturePath = "data/art/factory.png"
 health = 2500.0
 constructionSpeedMultiplier = 1.5
 mods = ["Factory"]
 numPerStar = 5
 category = "Economy"
-rotates = false
 
 [SPACE_HABITAT]
 name = "Space Habitat"
