--- a/data/objects/colonybuildings.toml
+++ b/data/objects/colonybuildings.toml
@@ -53,16 +53,18 @@ texturePath = "data/art/colonybuildings/mine.png"
 buildOnlyOnResources = true
 extraInfo = "Mines resources from tiles. Must be placed on a tile that has a resource."
 mine = true
+allowDuplicates = true
 
 [MINING]
 name = "Advanced Mine"
 description = "All your ores will be mine!"
 baseCost = [["COMMON_ORE", 40], ["UNCOMMON_ORE", 10]]
-exploitationModifier = 1.7
+exploitationModifier = 1.25
 requiresBuildings = ["BASIC_MINING"]
 texturePath = "data/art/colonybuildings/mine.png"
 buildOnlyOnResources = true
 mine = true
+allowDuplicates = true
 
 [ORBITAL_DEFENSE]
 name = "Orbital Defense"
