--- a/data/objects/colonybuildings.toml
+++ b/data/objects/colonybuildings.toml
@@ -4,6 +4,7 @@ description = "Roads, electricity, plumbing, you know, stuff like that."
 habitabilityModifier = 1.2
 addsPopulationLimit = 100000.0
 baseCost = [["COMMON_ORE", 20]]
+global = true
 
 [IMPROVED_INFRASTRUCTURE]
 name = "Improved Infrastructure"
@@ -12,6 +13,7 @@ requiresBuildings = ["INFRASTRUCTURE"]
 habitabilityModifier = 1.3
 addsPopulationLimit = 200000.0
 baseCost = [["COMMON_ORE", 50]]
+global = true
 
 [ADVANCED_INFRASTRUCTURE]
 name = "Advanced Infrastructure"
@@ -20,6 +22,7 @@ requiresBuildings = ["IMPROVED_INFRASTRUCTURE"]
 habitabilityModifier = 1.5
 addsPopulationLimit = 500000.0
 baseCost = [["COMMON_ORE", 200], ["UNCOMMON_ORE", 50]]
+global = true
 
 [FARMING]
 name = "Farms"
