did more work on the ship factory automator gui

--- a/at_odds.vcxproj.filters
+++ b/at_odds.vcxproj.filters
@@ -222,7 +222,7 @@
     <ClInclude Include="src\Keybindings.h" />
     <ClInclude Include="src\GUI\IconGUI.h" />
     <ClInclude Include="src\GUI\FactoriesGUI.h" />
-    <ClInclude Include="src\GUI\ShipFactoryGUI.h" />
+    <ClInclude Include="src\GUI\DesignListGUI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Animation.cpp" />
@@ -420,7 +420,7 @@
     <ClCompile Include="src\Keybindings.cpp" />
     <ClCompile Include="src\GUI\IconGUI.cpp" />
     <ClCompile Include="src\GUI\FactoriesGUI.cpp" />
-    <ClCompile Include="src\GUI\ShipFactoryGUI.cpp" />
+    <ClCompile Include="src\GUI\DesignListGUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="data\scripts\laserAnimation.lua" />
