--- a/data/objects/tradegoods.toml
+++ b/data/objects/tradegoods.toml
@@ -14,22 +14,32 @@ price = 4.5
 [CONSUMER_GOODS]
 name = "Computers"
 price = 7.0
+happiness = 0.0001
+wealthDivide = 100.0
 
 [CONSUMER_GOODS_2]
 name = "Space-o-visions"
 price = 5.0
+happiness = 0.00008
+wealthDivide = 100.0
 
 [CONSUMER_GOODS_3]
 name = "Geniusphones"
 price = 6.0
+happiness = 0.0002
+wealthDivide = 100.0
 
 [LUXURY_GOODS]
 name = "Video Games"
 price = 15.0
+happiness = 0.0003
+wealthDivide = 500.0
 
 [LUXURY_GOODS_2]
 name = "Organs"
 price = 20.0
+happiness = 0.00035
+wealthDivide = 500.0
 
 [ARMAMENTS]
 name = "Armaments"
