--- a/data/objects/weapons.toml
+++ b/data/objects/weapons.toml
@@ -32,6 +32,7 @@ constructionWeapon = true
 cost = [["COMMON_ORE", 5.0]]
 weaponPoints = 1.0
 upgradeable = false
+sound = "data/sound/spacebuild.wav"
 
 [MINING_LASER]
 name = "Mining Laser"
@@ -43,6 +44,7 @@ miningWeapon = true
 cost = [["COMMON_ORE", 5.0]]
 weaponPoints = 1.0
 upgradeable = false
+sound = "data/sound/mining2.wav"
 
 [ROCKET_LAUNCHER]
 name = "Rocket Launcher"
